Create library display template

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 </head>
 <body>
     <button>Add book</button>
+    <div class="library-display">
+        <h1 class="book-title">Little Title</h1>
+        <h2 class="book-author">Author Man</h2>
+    </div>
 </body>
 </html>
