Create a button that iterates through the library and logs each entry to the console

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <button>Add book</button>
-    <div class="library-display">
-        <h1 class="book-title">Little Title</h1>
-        <h2 class="book-author">Author Man</h2>
+    <button class="addBook">Add book</button>
+    <button class="refreshLibrary">Refresh library</button>
+    <div class="libraryDisplay">
+        <h1 class="bookTitle">Little Title</h1>
+        <h2 class="bookAuthor">Author Man</h2>
     </div>
 </body>
 </html>
