--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <button class="addBook">Add book</button>
+    <button class="clearLibrary">Clear library</button>
     <button class="refreshLibrary">Refresh library</button>
     <div class="libraryDisplay">
         <h1 class="bookTitle">Little Title</h1>
