Clear library display when refreshing books

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <button class="clearLibrary">Clear library</button>
     <button class="refreshLibrary">Refresh library</button>
     <div class="libraryDisplay">
-        <h1 class="bookTitle">Little Title</h1>
-        <h2 class="bookAuthor">Author Man</h2>
+        <!-- Displayed books go here -->
     </div>
 </body>
 </html>
